--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,7 @@
 name: imperialtv
-
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
@@ -30,7 +28,6 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
-
 dependencies:
   flutter:
     sdk: flutter
@@ -38,29 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-
-  flutter_lints: ^5.0.0
+  get_storage: ^2.1.1
+  intl: ^0.19.0
   flutter_svg: ^2.0.10+1
+  flutter_lints: ^5.0.0
   awesome_dialog: ^3.2.1
-  cupertino_icons: ^1.0.8
   get: ^4.6.6
   cached_network_image: ^3.4.1
-  get_storage: ^2.1.1
   google_fonts: ^6.2.1
   fluttertoast: ^8.2.4
   flutter_spinkit: ^5.2.0
   dio: ^5.4.3+1
-  intl: ^0.20.2
   url_launcher: ^6.2.6
   lottie: ^3.3.1
   pinput: ^5.0.1
@@ -86,6 +71,9 @@ dev_dependencies:
   vibration: ^3.1.3
   just_audio: ^0.10.4
   slide_to_act: ^2.0.2
+  mobile_scanner: ^6.0.2
+  smooth_page_indicator: ^1.0.0+2
+  #carousel_slider: ^4.2.1
 
   # Firebase
   cloud_firestore: ^5.6.4
@@ -94,6 +82,22 @@ dev_dependencies:
   firebase_messaging: ^15.2.5
   firebase_auth: ^5.5.3
   flutter_local_notifications: ^18.0.1
+
+
+
+
+
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -104,15 +108,14 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
-    #- assets/images/
     - assets/logo/
+    - assets/icons/
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+    - assets/home/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -125,6 +128,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+
+  fonts:
+
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-Black.ttf
+        - asset: assets/fonts/Inter-Bold.ttf
+        - asset: assets/fonts/Inter-ExtraLight.ttf
+        - asset: assets/fonts/Inter-Light.ttf
+        - asset: assets/fonts/Inter-Medium.ttf
+        - asset: assets/fonts/Inter-Regular.ttf
+        - asset: assets/fonts/Inter-SemiBold.ttf
+        - asset: assets/fonts/Inter-Thin.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
