--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   slide_to_act: ^2.0.2
   mobile_scanner: ^6.0.2
   smooth_page_indicator: ^1.0.0+2
+  intl_phone_field: ^3.2.0
   #carousel_slider: ^4.2.1
 
   # Firebase
@@ -115,6 +116,7 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/home/
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
